bugfix: close-btn on small screen height

--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,4 +1,4 @@
-@import url('./__form/popup__form.css');
+@import url('./__window/popup__window.css');
 @import url('./__content/popup__content.css');
 @import url('./__title/popup__title.css');
 @import url('./__input/popup__input.css');
@@ -9,19 +9,20 @@
 @import url('./__close/_figure/popup__close_figure.css');
 @import url('./__error/popup__error.css');
 @import url('./__error/_visible/popup__error_visible.css');
+
 .popup {
   /*при закрытии
   height: 0;
   overflow: hidden;
  */
+  display: flex;
+  width: 100%;
+  height: 100%;
   position: fixed;
   top: 0;
   left: 0;
   align-items: center;
   background: rgba(0, 0, 0, .5);
-  display: flex;
-  width: 100%;
-  height: 100%;
   visibility: hidden;
   opacity: 0;
   transition: visibility 0s, linear .5s;
